# lau-consciousness-bridge

./: AGENT.md  Cargo.toml  README.md
src/: lib.rs
